Add private attachments for admission letters
